<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorbg"
        tools:context=".ui.Activity.WelcomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <de.hdodenhof.circleimageview.CircleImageView
                app:civ_border_color="@color/blacklight"
                app:civ_border_width="2dp"
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:layout_marginTop="8dp"
                android:background="@drawable/black_border"
                android:id="@+id/shimmer_view_container1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:shimmer_base_alpha="1"
                app:shimmer_duration="3000"
                app:shimmer_highlight_alpha="0.4"
                app:shimmer_tilt="180">




            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_margin="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/cabin_sketch"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
            </com.facebook.shimmer.ShimmerFrameLayout>

            <Button
                android:id="@+id/btnsignup"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/create_Account"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_below="@+id/btnsignup"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"

                android:background="@drawable/buttonstyle"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="169dp"
                android:background="@drawable/edtborderblue"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnsignup"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="@+id/btnsignup"
                app:layout_constraintTop_toBottomOf="@+id/btnsignup">

                <Spinner

                    android:id="@+id/languageSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"

                    android:foregroundTint="@color/blue"
                    android:foregroundTintMode="add"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp" />
            </LinearLayout>


            <TextView

                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/the_official_app"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"


                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>