<?xml version="1.0" encoding="utf-8"?>
<layout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Activity.ResetPasswordActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg"
            android:foregroundGravity="center"
            android:gravity="center|top"
            android:orientation="vertical"
            android:padding="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.48000002">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">



                <ScrollView
                    android:id="@+id/ScrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_1"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="32dp"
                    android:padding="25dp">

                    <LinearLayout
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:id="@+id/member_login_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="2dp"
                            android:text="Reset Password"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:typeface="monospace" />


                        <com.google.android.material.textfield.TextInputLayout
                            android:gravity="center|start"
                            android:orientation="horizontal"
                            android:id="@+id/txtmnumber"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:outlineSpotShadowColor="@color/blue"
                            app:passwordToggleEnabled="true"
                            android:textColorHint="@color/black"
                            app:boxStrokeWidth="1dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:digits="0123456789"

                            android:id="@+id/edtmobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_baseline_smartphone_24"
                            android:drawableLeft="@drawable/ic_baseline_smartphone_24"
                            android:drawablePadding="16dp"
                            android:hint="Mobile Number"
                            android:textColorHint="@color/black"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:gravity="center|start"
                            android:orientation="horizontal"
                            android:id="@+id/txtOldpassword"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:outlineSpotShadowColor="@color/blue"
                            app:passwordToggleEnabled="true"
                            android:textColorHint="@color/black"
                            app:boxStrokeWidth="1dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtOldpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/phone"
                            android:drawableLeft="@drawable/phone"
                            android:drawablePadding="16dp"
                            android:hint="@string/your_old_password"
                            android:textColorHint="@color/black"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>



                        <com.google.android.material.textfield.TextInputLayout
                            android:gravity="center|start"
                            android:orientation="horizontal"
                            android:id="@+id/tilpassword"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:outlineSpotShadowColor="@color/blue"
                            app:passwordToggleEnabled="true"
                            android:textColorHint="@color/black"
                            app:boxStrokeWidth="1dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/phone"
                            android:drawableLeft="@drawable/phone"
                            android:drawablePadding="16dp"
                            android:hint="@string/your_new_password"
                            android:textColorHint="@color/black"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            app:passwordToggleEnabled="true"
                            android:gravity="center|start"
                            android:orientation="horizontal"
                            android:id="@+id/llll"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:outlineSpotShadowColor="@color/blue"
                            android:textColorHint="@color/black"
                            app:boxStrokeWidth="1dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/phone"
                            android:drawableLeft="@drawable/phone"
                            android:drawablePadding="16dp"
                            android:hint="@string/confirm_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <Button
                            android:id="@+id/resetpasswd_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/otp_edtext"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="25dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/buttonstyle"
                            android:text="Reset password"
                            android:textColor="@color/white"
                            android:textAllCaps="false"
                            android:textSize="20dp" />

                    </LinearLayout>
                </ScrollView>

                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/view_1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:background="@mipmap/ic_launcher"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="2dp" />

            </RelativeLayout>


            <!-- <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:text="@string/registered_emailid"
                 android:textColor="@color/colorAccent"
                 android:textSize="17sp" />

             <EditText
                 android:id="@+id/registered_emailid"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:background="@android:color/transparent"
                 android:drawableLeft="@drawable/ic_email"
                 android:drawablePadding="8dp"
                 android:gravity="center_vertical"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:padding="10dp"
                 android:singleLine="true"
                 android:textColor="@color/colorAccent"
                 android:textColorHint="@color/colorAccent"
                 android:textSize="16sp" />

             <View
                 android:layout_width="fill_parent"
                 android:layout_height="1px"
                 android:background="@color/red_btn_bg_color" />

             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp">

                 <TextView
                     android:id="@+id/backToLoginBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"

                     android:padding="5dp"
                     android:text="@string/back"
                     android:textSize="15sp"
                     android:textStyle="bold" />

                 <TextView
                     android:id="@+id/forgot_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:gravity="right"
                     android:padding="5dp"
                     android:text="@string/submit"
                     android:textColor="@color/colorAccent"
                     android:textSize="15sp"
                     android:textStyle="bold" />
             </RelativeLayout>-->

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>